tests/neg/i19414.check
-- [E172] Type Error: tests/neg/i19414.scala:15:34 ---------------------------------------------------------------------
15 |  summon[BodySerializer[JsObject]] // error: Ambiguous given instances
   |                                  ^
   |No best given instance of type BodySerializer[JsObject] was found for parameter x of method summon in object Predef.
   |I found:
   |
   |    given_BodySerializer_B[B](
   |      evidence$1 =
   |        /* ambiguous: both given instance given_Writer_JsValue and given instance given_Writer_JsObject match type Writer[B] */
   |          summon[Writer[B]]
   |    )
   |
   |But both given instance given_Writer_JsValue and given instance given_Writer_JsObject match type Writer[B].
